# esp32-homekit-demo

./: .gitignore  .gitmodules  FolderIcon.icns  LICENSE  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Help_Request  bug_report.md  feature_request.md
.github/workflows/: codeql.yml
components/: CMakeLists.txt  LICENSE  README.md  component.mk
components/common/button/: CMakeLists.txt  README.md  button.c  button.h  component.mk  port.c  port.h  toggle.c  toggle.h
components/common/button/example/: Makefile  button_example.c
components/esp-idf/http-parser/: CMakeLists.txt  README.md  component.mk
components/espressif__mdns/: idf_component.yml
components/hsi2rgbw/: CMakeLists.txt  hsi2rgbw.c  hsi2rgbw.h
components/wolfssl/: .component_hash  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/wolfssl/examples/wolfssl_benchmark/: sdkconfig.defaults
components/wolfssl/examples/wolfssl_benchmark/main/: component.mk
components/wolfssl/examples/wolfssl_client/main/: client-tls.c
components/wolfssl/examples/wolfssl_server/main/: idf_component.yml  server-tls.c
components/wolfssl/examples/wolfssl_test/: CMakeLists.txt  sdkconfig.defaults
components/wolfssl/examples/wolfssl_test/main/: CMakeLists.txt  component.mk  idf_component.yml  main.c  time_helper.c
components/wolfssl/include/: README.md  backup.h  config.h  user_settings.h
components/wolfssl/wolfcrypt/test/: test_paths.h
components/wolfssl/wolfssl/: options.h
examples/Aubess_power_monitor_switch/: README.md
examples/button/: CMakeLists.txt  (+1 more)
tests/: CMakeLists.txt
(+214 files in other folders)
